--- a/index.html
+++ b/index.html
@@ -7,35 +7,19 @@
 </head>
 <body>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#resume">Resume</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <h1>Hi, I'm Vidya 👋</h1>
+  <p>Engineering Student | IoT & Web Developer</p>
 
-  <section id="about">
-    <h1>Hi, I'm Vidya</h1>
-    <p>Engineering student | IoT & Web Developer</p>
-  </section>
+  <h2>Projects</h2>
 
-  <section id="resume">
-    <h2>Resume</h2>
-    <a href="resume.pdf" download>Download Resume</a>
-  </section>
+  <h3>Smart Medicine Reminder System</h3>
+  <p>Django, React, Twilio, SQLite</p>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Smart Medicine Reminder System</h3>
-      <p>Django, React, Twilio SMS</p>
-    </div>
-  </section>
+  <h3>IoT Hardware Project</h3>
+  <p>ESP32, Sensors, IoT</p>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: vidya@email.com</p>
-  </section>
+  <h2>Contact</h2>
+  <p>Email: your-email@example.com</p>
 
   <script src="script.js"></script>
 </body>
